An accented directory name breaks the product, and the obvious fix is inert
Phase 04 unit 7 found it; I reproduced it myself before routing it. With no
LANG/LC_ALL exported, sun.jnu.encoding is ANSI_X3.4-1968, so

    Path.of("/data/protéomique/x.mzML")
      -> InvalidPathException: ... /data/prot?omique/x.mzML

while the identical call under LANG=C.UTF-8 returns the path unharmed. It fails
before any CometGUI code runs, so nothing downstream recovers it. It is in the
Definition of Done's own sentence about choosing spectra and a FASTA, non-ASCII
paths are named in the specification's fake-executable list, and Phase 03's gate
item 4 requires them to work.

THE PART WORTH THE COMMIT. The proposed remedy -- -Dsun.jnu.encoding=UTF-8
-Dfile.encoding=UTF-8 in the jpackage java-options -- DOES NOT WORK. Measured:
the flag is accepted without error and sun.jnu.encoding still reads
ANSI_X3.4-1968, because the JVM resolves it from the process environment before
system properties are applied. -Dfile.encoding=UTF-8 appears to help only
because it was already UTF-8, which makes the pair look half-effective.

Adopting it would have produced a clean build, a green gate, and a product that
still cannot open an accented path: a remedy that cannot work, accepted because
nothing goes red. That is this project's signature defect relocated out of a
test and into a fix, and it is the reason this is recorded now rather than left
to a handoff.

What actually works, verified: the process environment before JVM start,
LC_ALL=C.UTF-8 or LANG=C.UTF-8. So the requirement is that the LAUNCHER starts
the JVM in a UTF-8 locale -- a packaging problem that --java-options cannot
express.

Routed: PHASE-16 owns the launcher and now carries it beside the
--enable-native-access item Phase 02 left it, with the dead end named so nobody
re-derives it. PHASE-14 owns proving it and must ASSERT the runner's locale
rather than inherit it, since a runner without a UTF-8 locale silently skips the
coverage a us